# LKAS

./: .gitignore  README.md
LKAS/: README.md
LKAS/src/gui/: package.xml  setup.py
LKAS/src/gui/gui/: control_gui.py  sim_gui.py
LKAS/src/main_bot/: CMakeLists.txt  package.xml
LKAS/src/main_bot/config/practical/: controller_real.yaml  ekf.yaml
LKAS/src/main_bot/config/simulation/: controller_gz_sim.yaml  ekf.yaml  gz_bridge.yaml
LKAS/src/main_bot/description/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
LKAS/src/main_bot/description/practical/: ros2_control.xacro
LKAS/src/main_bot/description/simulation/: ros2_control.xacro
LKAS/src/main_bot/hardware/: main_bot_hardware.xml  real_robot_system.cpp
LKAS/src/main_bot/hardware/include/main_bot_hardware/: real_robot_system.hpp
LKAS/src/main_bot/launch/practical/: manual_test_real.launch.py  robot.launch.py
LKAS/src/main_bot/launch/simulation/: gazebo.launch.py  manual_test_sim.launch.py  test_world.launch.py
LKAS/src/main_bot/overtake/ov_inc/: offset_planner.hpp  safety_monitor.hpp  state_machine.hpp
LKAS/src/main_bot/overtake/ov_src/: offset_planner.cpp  overtake_node.cpp  safety_monitor.cpp  state_machine.cpp
LKAS/src/main_bot/scripts/: lane_follower_node.py  odom_tf_relay.py  overtake_vision_node.py
LKAS/src/main_bot/scripts/vision/: __init__.py  ai_detector.py  estimator.py  processor.py  transformer.py
LKAS/src/main_bot/src/: lane_control_node.cpp
LKAS/src/main_bot/worlds/: race_way.world  race_way.world.bak  race_way_3lane.bak
LKAS/src/main_bot/worlds/npc/: npc_driver_node.cpp
LKAS/src/mcu_agent/: CMakeLists.txt  README.md  package.xml
LKAS/src/mcu_agent/include/mcu_agent/: agent_supervisor.hpp
LKAS/src/mcu_agent/launch/: mcu_agent.launch.py
LKAS/src/mcu_agent/scripts/: setup_micro_ros_agent.sh
LKAS/src/mcu_agent/src/: agent_supervisor.cpp  mcu_agent_node.cpp
esp32-for-lkas/: HARDWARE.md  fix_matter_ccflags.py  platformio.ini
esp32-for-lkas/include/: drive_motor.hpp  imu_sensor.hpp  micro_ros_bridge.hpp  pid_controller.hpp  robot_config.hpp  robot_types.hpp  steering_actuator.hpp
esp32-for-lkas/src/: drive_motor.cpp  imu_sensor.cpp  main.cpp  micro_ros_bridge.cpp  pid_controller.cpp  steering_actuator.cpp
src/main_bot/: CMakeLists.txt  package.xml
src/main_bot/config/: controller_gz_sim.yaml  ekf.yaml
src/main_bot/config/simulation/: gz_bridge.yaml
src/main_bot/description/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro
src/main_bot/description/simulation/: ros2_control.xacro
src/main_bot/launch/: gazebo.launch.py
src/main_bot/launch/simulation/: gazebo.launch.py
src/main_bot/overtake/ov_inc/: offset_planner.hpp  state_machine.hpp
src/main_bot/overtake/ov_src/: offset_planner.cpp  overtake_node.cpp  state_machine.cpp
src/main_bot/scripts/: lane_follower_node.py  lane_processor.py
src/main_bot/scripts/vision/: ai_detector.py  estimator.py  processor.py  transformer.py
src/main_bot/src/: lane_control_node.cpp
src/main_bot/worlds/: race_way.world  race_way_2lane.bak
