<?xml version="1.0"?>
<package format="3">
  <name>gui</name>
  <version>0.1.0</version>
  <description>DVT Autonomous Robot — Simulation Control GUI</description>
  <maintainer email="dangtinh.ftcpy@gmail.com">dvt</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
