<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcu_agent</name>
  <version>0.1.0</version>
  <description>
    Supervises the micro-ROS Agent process that bridges the ESP32 microcontroller (motors,
    steering, wheel encoders, IMU) onto ROS 2 topics for the real robot.
  </description>
  <maintainer email="dangtinh.ftcpy@gmail.com">dvt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- The actual micro_ros_agent executable comes from the vendored micro-ROS-Agent package,
       built once via scripts/setup_micro_ros_agent.sh (not resolvable through rosdep/apt). -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
